[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-triage-env"
version = "1.0.0"
description = "OpenEnv IT Incident Triage & Resolution Environment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "IT Incident Triage Team"}]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
include = ["server*", "models*"]

